斐波那契数列

--- a/my-project/test3.html
+++ b/my-project/test3.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-   <script src="text/javascript">
+  </head>
+  <body>
+    <script>
 
-        var n = parseInt(window.prompt(请输入第几位数));
-        if(n <=0){
-            console.log("输入错误");
-            break;
-        }
-        var n1 = 1;
-        var n2 = 1;
-        var n3;
-        if(n <= 2){
-            console.log(1);
-            return;
-        }
-        for(var i = 2; i < n; i++){
-            n3 = n1 + n2;
-            n1 = n2;
-            n2 = n3;
-            
-        }
-        console.log(n3);
-   </script> 
-</body>
+      var n = parseInt(window.prompt("请输入第几位数"));
+      var n1 = 1;
+      var n2 = 1;
+      var n3;
+      for(var i = 2; i < n; i++){
+          n3 = n1 + n2;
+          n1 = n2;
+          n2 = n3;
+
+      }
+
+      console.log(n3);
+    </script>
+  </body>
 </html>
