--- a/my-project/test6.html
+++ b/my-project/test6.html
@@ -12,12 +12,12 @@
         // 3. 寻找函数声明并赋值函数体
         // 4. 执行
 
-        // console.log(a);
-        // var a = 1;
-        // function a(){
-        //     console.log(2);
-        // }
-        // console.log(a);
+        console.log(a);
+        var a = 1;
+        function a(){
+            console.log(2);
+        }
+        console.log(a);
 
         // 练习1：
         // function test(a){
@@ -234,26 +234,26 @@
         
 
         // 练习10：
-        a = 1;
-        function test(e){
-            function e(){}
-            arguments[0] = 2;
-            console.log(e);
-            if(a){
-                var b = 3;
-            }
-            var c;
-            a = 4;
-            var a;
-            console.log(b);
-            f = 5;
-            console.log(c);
-            console.log(a);
-        }
-        var a;
-        test(1);
-        console.log(a);
-        console.log(f);
+        // a = 1;
+        // function test(e){
+        //     function e(){}
+        //     arguments[0] = 2;
+        //     console.log(e);
+        //     if(a){
+        //         var b = 3;
+        //     }
+        //     var c;
+        //     a = 4;
+        //     var a;
+        //     console.log(b);
+        //     f = 5;
+        //     console.log(c);
+        //     console.log(a);
+        // }
+        // var a;
+        // test(1);
+        // console.log(a);
+        // console.log(f);
 
         /**
          * GO{
